; ModuleID = '/home/carl/AnghaBench/h2o/deps/quicly/t/extr_udpfw.c_init_queue.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/quicly/t/extr_udpfw.c_init_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.queue_t = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32*, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.queue_t*)* @init_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_queue(%struct.queue_t* %0) #0 {
  %2 = alloca %struct.queue_t*, align 8
  store %struct.queue_t* %0, %struct.queue_t** %2, align 8
  %3 = load %struct.queue_t*, %struct.queue_t** %2, align 8
  %4 = getelementptr inbounds %struct.queue_t, %struct.queue_t* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = icmp ne i32 %6, 0
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert(i32 %8)
  %10 = load %struct.queue_t*, %struct.queue_t** %2, align 8
  %11 = getelementptr inbounds %struct.queue_t, %struct.queue_t* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 3
  store i64 0, i64* %12, align 8
  %13 = load %struct.queue_t*, %struct.queue_t** %2, align 8
  %14 = getelementptr inbounds %struct.queue_t, %struct.queue_t* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 2
  store i64 0, i64* %15, align 8
  %16 = load %struct.queue_t*, %struct.queue_t** %2, align 8
  %17 = getelementptr inbounds %struct.queue_t, %struct.queue_t* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = sext i32 %19 to i64
  %21 = mul i64 4, %20
  %22 = trunc i64 %21 to i32
  %23 = call i32* @malloc(i32 %22)
  %24 = load %struct.queue_t*, %struct.queue_t** %2, align 8
  %25 = getelementptr inbounds %struct.queue_t, %struct.queue_t* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 1
  store i32* %23, i32** %26, align 8
  %27 = load %struct.queue_t*, %struct.queue_t** %2, align 8
  %28 = getelementptr inbounds %struct.queue_t, %struct.queue_t* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 1
  %30 = load i32*, i32** %29, align 8
  %31 = icmp ne i32* %30, null
  %32 = zext i1 %31 to i32
  %33 = call i32 @assert(i32 %32)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
